Upgrade deps & downgrade angular dev to version 4

--- a/package.json
+++ b/package.json
@@ -34,17 +34,17 @@
   "author": "The ng-vcl authors",
   "license": "MIT",
   "devDependencies": {
-    "@angular/animations": "^5.0.0-rc.9",
-    "@angular/common": "^5.0.0-rc.9",
-    "@angular/compiler": "^5.0.0-rc.9",
-    "@angular/compiler-cli": "^5.0.0-rc.9",
-    "@angular/core": "^5.0.0-rc.9",
-    "@angular/forms": "^5.0.0-rc.9",
-    "@angular/http": "^5.0.0-rc.9",
-    "@angular/platform-browser": "^5.0.0-rc.9",
-    "@angular/platform-browser-dynamic": "^5.0.0-rc.9",
-    "@angular/router": "^5.0.0-rc.9",
-    "@ngtools/webpack": "^1.7.4",
+    "@angular/animations": "^4.4.6",
+    "@angular/common": "^4.4.6",
+    "@angular/compiler": "^4.4.6",
+    "@angular/compiler-cli": "^4.4.6",
+    "@angular/core": "^4.4.6",
+    "@angular/forms": "^4.4.6",
+    "@angular/http": "^4.4.6",
+    "@angular/platform-browser": "^4.4.6",
+    "@angular/platform-browser-dynamic": "^4.4.6",
+    "@angular/router": "^4.4.6",
+    "@ngtools/webpack": "^1.8.0",
     "@types/gulp": "^4.0.5",
     "@types/node": "^8.0.47",
     "@types/tether": "^1.4.3",
@@ -57,21 +57,21 @@
     "angular-router-loader": "^0.6.0",
     "angular2-template-loader": "^0.6.2",
     "autoprefixer": "^7.1.6",
-    "awesome-typescript-loader": "^3.2.3",
-    "chance": "^1.0.11",
+    "awesome-typescript-loader": "^3.3.0",
+    "chance": "^1.0.12",
     "copy-webpack-plugin": "^4.2.0",
     "core-js": "^2.5.1",
-    "cpr": "^2.2.0",
+    "cpr": "^3.0.1",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
     "es6-promisify": "^5.0.0",
-    "extract-text-webpack-plugin": "^3.0.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.4",
     "fsmonitor": "^0.2.4",
     "fuse.js": "^3.2.0",
     "git-directory-deploy": "^1.5.1",
     "gulp": "^3.9.1",
-    "gulp-better-rollup": "^1.1.1",
+    "gulp-better-rollup": "^2.0.0",
     "gulp-json-modify": "^1.0.2",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.6.1",
@@ -88,7 +88,7 @@
     "merge-stream": "^1.0.1",
     "npm-run-all": "^4.1.1",
     "plotly.js": "^1.31.2",
-    "postcss-color-function": "^4.0.0",
+    "postcss-color-function": "^4.0.1",
     "postcss-css-variables": "^0.8.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^2.0.8",
@@ -100,15 +100,15 @@
     "rollup-plugin-replace": "^2.0.0",
     "rucksack-css": "^1.0.2",
     "run-sequence": "^2.2.0",
-    "rxjs": "^5.5.1",
+    "rxjs": "^5.5.2",
     "style-loader": "^0.19.0",
-    "sugarss": "^1.0.0",
+    "sugarss": "^1.0.1",
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
-    "typescript": "^2.5.3",
+    "typescript": "^2.6.1",
     "url-loader": "^0.6.1",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.3",
+    "webpack-dev-server": "^2.9.4",
     "zone.js": "^0.8.18"
   },
   "pre-commit": [
