--- a/src/adv-http/package.json
+++ b/src/adv-http/package.json
@@ -12,9 +12,9 @@
   "module": "adv-http.js",
   "typings": "index.d.ts",
   "peerDependencies": {
-    "@angular/core": "^4.2.0",
-    "@angular/http": "^4.2.0",
-    "rxjs": "^5.0.1"
+    "@angular/core": "^4.2.0 || ^5",
+    "@angular/http": "^4.2.0 || ^5",
+    "rxjs": "^5"
   },
   "dependencies": { }
 }
