--- a/src/ng-vcl/package.json
+++ b/src/ng-vcl/package.json
@@ -12,13 +12,13 @@
   "module": "ng-vcl.js",
   "typings": "index.d.ts",
   "peerDependencies": {
-    "@angular/common": "^4.2.0",
-    "@angular/animations": "^4.2.0",
-    "@angular/core": "^4.2.0",
-    "@angular/forms": "^4.2.0",
-    "@angular/router": "^4.2.0",
-    "rxjs": "^5.0.1",
-    "hammerjs": "^2.0.8"
+    "@angular/common": "^4.2.0 || ^5",
+    "@angular/animations": "^4.2.0 || ^5",
+    "@angular/core": "^4.2.0 || ^5",
+    "@angular/forms": "^4.2.0 || ^5",
+    "@angular/router": "^4.2.0 || ^5",
+    "rxjs": "^5",
+    "hammerjs": "^2"
   },
   "dependencies": { }
 }
