--- a/src/store/package.json
+++ b/src/store/package.json
@@ -12,9 +12,9 @@
   "module": "store.js",
   "typings": "index.d.ts",
   "peerDependencies": {
-    "@angular/core": "^4.2.0",
-    "@angular/router": "^4.2.0",
-    "rxjs": "^5.0.3"
+    "@angular/core": "^4.2.0  || ^5",
+    "@angular/router": "^4.2.0  || ^5",
+    "rxjs": "^5"
   },
   "dependencies": { }
 }
