--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "scripts": {
     "lint": "tslint --type-check -p ./tsconfig.json",
     "lint:src": "tslint --type-check -p ./src/tsconfig.json",
-    "dev": "webpack-dev-server --config webpack.config.js --env.ENV=development",
-    "dev:aot": "webpack-dev-server --config webpack.config.js --env.ENV=development --env.AOT=true",
+    "dev": "webpack-dev-server --env.target=development",
     "docs:clean": "rimraf docs",
-    "docs:build": "webpack --config webpack.config.js --env.ENV=production --env.AOT=true",
+    "docs:build": "webpack --env.target=production",
     "docs:deploy": "git-directory-deploy --directory docs --branch gh-pages",
     "docs": "npm-run-all lint docs:clean docs:build",
     "build:clean": "rimraf dist",
@@ -34,32 +33,33 @@
   "author": "The ng-vcl authors",
   "license": "MIT",
   "devDependencies": {
-    "@angular/animations": "^4.4.6",
-    "@angular/common": "^4.4.6",
-    "@angular/compiler": "^4.4.6",
-    "@angular/compiler-cli": "^4.4.6",
-    "@angular/core": "^4.4.6",
-    "@angular/forms": "^4.4.6",
-    "@angular/http": "^4.4.6",
-    "@angular/platform-browser": "^4.4.6",
-    "@angular/platform-browser-dynamic": "^4.4.6",
-    "@angular/router": "^4.4.6",
-    "@ngtools/webpack": "^1.8.0",
+    "@angular-devkit/build-optimizer": "0.0.34",
+    "@angular/animations": "^5.0.5",
+    "@angular/common": "^5.0.5",
+    "@angular/compiler": "^5.0.5",
+    "@angular/compiler-cli": "^5.0.5",
+    "@angular/core": "^5.0.5",
+    "@angular/forms": "^5.0.5",
+    "@angular/http": "^5.0.5",
+    "@angular/platform-browser": "^5.0.5",
+    "@angular/platform-browser-dynamic": "^5.0.5",
+    "@angular/router": "^5.0.5",
+    "@ngtools/webpack": "^1.8.5",
     "@types/gulp": "^4.0.5",
-    "@types/node": "^8.0.47",
+    "@types/node": "^8.0.54",
     "@types/tether": "^1.4.3",
     "@vcl/breakpoints": "^0.2.0",
-    "@vcl/core-modules": "^0.2.4",
+    "@vcl/core-modules": "^0.2.5",
     "@vcl/default-theme": "^0.2.1",
     "@vcl/default-theme-terms": "^0.2.1",
     "@vcl/font-awesome": "^0.2.0",
     "@vcl/preprocessor": "^0.2.2",
-    "angular-router-loader": "^0.6.0",
-    "angular2-template-loader": "^0.6.2",
-    "autoprefixer": "^7.1.6",
-    "awesome-typescript-loader": "^3.3.0",
+    "angular-router-loader": "^0.8.0",
+    "autoprefixer": "^7.2.1",
+    "awesome-typescript-loader": "^3.4.1",
     "chance": "^1.0.12",
-    "copy-webpack-plugin": "^4.2.0",
+    "circular-dependency-plugin": "^4.2.1",
+    "copy-webpack-plugin": "^4.2.3",
     "core-js": "^2.5.1",
     "cpr": "^3.0.1",
     "css-loader": "^0.28.7",
@@ -81,17 +81,17 @@
     "html-webpack-plugin": "^2.30.1",
     "ignore-loader": "^0.1.2",
     "json-loader": "^0.5.7",
-    "jsoneditor": "^5.9.6",
+    "jsoneditor": "^5.11.0",
     "jsonschema": "^1.2.0",
     "markdown-loader": "^2.0.1",
-    "marked": "^0.3.6",
+    "marked": "^0.3.7",
     "merge-stream": "^1.0.1",
-    "npm-run-all": "^4.1.1",
+    "npm-run-all": "^4.1.2",
     "plotly.js": "^1.31.2",
     "postcss-color-function": "^4.0.1",
     "postcss-css-variables": "^0.8.0",
     "postcss-easy-import": "^3.0.0",
-    "postcss-loader": "^2.0.8",
+    "postcss-loader": "^2.0.9",
     "postcss-nesting": "^4.2.1",
     "pre-commit": "^1.2.2",
     "raw-loader": "^0.5.1",
@@ -105,10 +105,11 @@
     "sugarss": "^1.0.1",
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
-    "typescript": "^2.6.1",
+    "typescript": "^2.6.2",
     "url-loader": "^0.6.1",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4",
+    "webpack": "^3.9.1",
+    "webpack-dev-server": "^2.9.5",
+    "webpack-merge": "^4.1.1",
     "zone.js": "^0.8.18"
   },
   "pre-commit": [
