--- a/src/json-editor/package.json
+++ b/src/json-editor/package.json
@@ -12,10 +12,10 @@
   "module": "json-editor.js",
   "typings": "index.d.ts",
   "peerDependencies": {
-    "@angular/common": "^4.2.0 || ^5",
-    "@angular/core": "^4.2.0 || ^5",
-    "@angular/forms": "^4.2.0 || ^5",
-    "rxjs": "^5"
+    "@angular/common": "^5",
+    "@angular/core": "^5",
+    "@angular/forms": "^5",
+    "rxjs": "^5.5.0"
   },
   "dependencies": {
     "jsoneditor": "^5.5.11"
