--- a/src/jss-form/package.json
+++ b/src/jss-form/package.json
@@ -12,11 +12,11 @@
   "module": "jss-form.js",
   "typings": "index.d.ts",
   "peerDependencies": {
-    "@angular/common": "^4.2.0 || ^5",
-    "@angular/core": "^4.2.0 || ^5",
-    "@angular/forms": "^4.2.0 || ^5",
-    "rxjs": "^5",
-    "@ng-vcl/ng-vcl": "^0.3.0"
+    "@angular/common": "^5",
+    "@angular/core": "^5",
+    "@angular/forms": "^5",
+    "rxjs": "^5.5.0",
+    "@ng-vcl/ng-vcl": "^0.4.0-0"
   },
   "dependencies": {
     "jsonschema": "^1.1.1"
