--- a/src/ng-vcl/package.json
+++ b/src/ng-vcl/package.json
@@ -12,12 +12,12 @@
   "module": "ng-vcl.js",
   "typings": "index.d.ts",
   "peerDependencies": {
-    "@angular/common": "^4.2.0 || ^5",
-    "@angular/animations": "^4.2.0 || ^5",
-    "@angular/core": "^4.2.0 || ^5",
-    "@angular/forms": "^4.2.0 || ^5",
-    "@angular/router": "^4.2.0 || ^5",
-    "rxjs": "^5",
+    "@angular/common": "^5",
+    "@angular/animations": "^5",
+    "@angular/core": "^5",
+    "@angular/forms": "^5",
+    "@angular/router": "^5",
+    "rxjs": "^5.5.0",
     "hammerjs": "^2"
   },
   "dependencies": { }
