--- a/package.json
+++ b/package.json
@@ -34,64 +34,64 @@
   "author": "The ng-vcl authors",
   "license": "MIT",
   "devDependencies": {
-    "@angular-devkit/build-optimizer": "0.0.36",
-    "@angular/animations": "^5.1.3",
-    "@angular/common": "^5.1.3",
-    "@angular/compiler": "^5.1.3",
-    "@angular/compiler-cli": "^5.1.3",
-    "@angular/core": "^5.1.3",
-    "@angular/forms": "^5.1.3",
-    "@angular/http": "^5.1.3",
-    "@angular/platform-browser": "^5.1.3",
-    "@angular/platform-browser-dynamic": "^5.1.3",
-    "@angular/router": "^5.1.3",
-    "@ngtools/webpack": "^1.9.3",
+    "@angular-devkit/build-optimizer": "^0.4.6",
+    "@angular/animations": "^5.2.9",
+    "@angular/common": "^5.2.9",
+    "@angular/compiler": "^5.2.9",
+    "@angular/compiler-cli": "^5.2.9",
+    "@angular/core": "^5.2.9",
+    "@angular/forms": "^5.2.9",
+    "@angular/http": "^5.2.9",
+    "@angular/platform-browser": "^5.2.9",
+    "@angular/platform-browser-dynamic": "^5.2.9",
+    "@angular/router": "^5.2.9",
+    "@ngtools/webpack": "^1.10.2",
     "@types/gulp": "^4.0.5",
-    "@types/node": "^8.0.54",
+    "@types/node": "^9.4.7",
+    "@types/tether": "^1.4.3",
     "@vcl/breakpoints": "^0.2.0",
-    "@vcl/core-modules": "^0.2.7",
-    "@vcl/default-theme": "^0.2.1",
-    "@vcl/default-theme-terms": "^0.2.1",
+    "@vcl/core-modules": "^0.2.8",
+    "@vcl/default-theme": "^0.2.2",
+    "@vcl/default-theme-terms": "^0.2.2",
     "@vcl/font-awesome": "^0.2.0",
+    "@vcl/preprocessor": "^0.2.4",
     "angular-router-loader": "^0.8.2",
-    "autoprefixer": "^7.2.4",
-    "@vcl/preprocessor": "^0.2.3",
-    "awesome-typescript-loader": "^3.4.1",
+    "autoprefixer": "^8.1.0",
+    "awesome-typescript-loader": "^4.0.1",
     "chance": "^1.0.13",
-    "circular-dependency-plugin": "^4.3.0",
-    "copy-webpack-plugin": "^4.3.1",
+    "circular-dependency-plugin": "^4.4.0",
+    "copy-webpack-plugin": "^4.5.1",
     "core-js": "^2.5.3",
     "cpr": "^3.0.1",
-    "css-loader": "^0.28.8",
+    "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
-    "es6-promisify": "^5.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
+    "file-loader": "^1.1.11",
     "fsmonitor": "^0.2.4",
     "fuse.js": "^3.2.0",
     "git-directory-deploy": "^1.5.1",
     "gulp": "^3.9.1",
-    "gulp-better-rollup": "^2.0.0",
+    "gulp-better-rollup": "^3.0.0",
     "gulp-json-modify": "^1.0.2",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.6.1",
     "hammerjs": "^2.0.8",
     "highlight-loader": "^0.7.2",
-    "html-loader": "^0.5.4",
-    "html-webpack-plugin": "^2.30.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.0.6",
     "ignore-loader": "^0.1.2",
     "json-loader": "^0.5.7",
-    "jsoneditor": "^5.13.1",
+    "jsoneditor": "^5.14.0",
     "jsonschema": "^1.2.2",
-    "markdown-loader": "^2.0.1",
-    "marked": "^0.3.9",
+    "markdown-loader": "^2.0.2",
+    "marked": "^0.3.17",
     "merge-stream": "^1.0.1",
     "npm-run-all": "^4.1.2",
-    "plotly.js": "^1.31.2",
+    "plotly.js": "^1.34.0",
     "postcss-color-function": "^4.0.1",
     "postcss-css-variables": "^0.8.0",
     "postcss-easy-import": "^3.0.0",
-    "postcss-loader": "^2.0.10",
+    "postcss-loader": "^2.1.2",
     "postcss-nesting": "^4.2.1",
     "pre-commit": "^1.2.2",
     "raw-loader": "^0.5.1",
@@ -100,17 +100,17 @@
     "rollup-plugin-replace": "^2.0.0",
     "rucksack-css": "^1.0.2",
     "run-sequence": "^2.2.1",
-    "rxjs": "^5.5.6",
-    "style-loader": "^0.19.1",
+    "rxjs": "^5.5.7",
+    "style-loader": "^0.20.3",
     "sugarss": "^1.0.1",
-    "ts-node": "^4.1.0",
-    "tslint": "^5.8.0",
-    "typescript": "^2.6.2",
-    "url-loader": "^0.6.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7",
-    "webpack-merge": "^4.1.1",
-    "zone.js": "^0.8.19"
+    "ts-node": "^5.0.1",
+    "tslint": "^5.9.1",
+    "typescript": "^2.7.2",
+    "url-loader": "^1.0.1",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.2",
+    "webpack-merge": "^4.1.2",
+    "zone.js": "^0.8.20"
   },
   "pre-commit": [
     "lint"
