--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "marked": "^0.3.17",
     "merge-stream": "^1.0.1",
     "npm-run-all": "^4.1.2",
-    "plotly.js": "^1.34.0",
+    "plotly.js": "1.34.0",
     "postcss-color-function": "^4.0.1",
     "postcss-css-variables": "^0.8.0",
     "postcss-easy-import": "^3.0.0",
