--- a/package.json
+++ b/package.json
@@ -90,11 +90,13 @@
     "plotly.js": "1.34.0",
     "postcss-color-function": "^4.0.1",
     "postcss-css-variables": "^0.8.0",
+    "postcss-cssnext": "^3.1.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^2.1.2",
     "postcss-nesting": "^4.2.1",
     "pre-commit": "^1.2.2",
     "raw-loader": "^0.5.1",
+    "reload-html-webpack-plugin": "^0.1.2",
     "resolve-bin": "^0.4.0",
     "rimraf": "^2.6.2",
     "rollup-plugin-replace": "^2.0.0",
@@ -103,6 +105,7 @@
     "rxjs": "^5.5.7",
     "style-loader": "^0.20.3",
     "sugarss": "^1.0.1",
+    "to-string-loader": "^1.1.5",
     "ts-node": "^5.0.1",
     "tslint": "^5.9.1",
     "typescript": "^2.7.2",
@@ -114,5 +117,6 @@
   },
   "pre-commit": [
     "lint"
-  ]
+  ],
+  "dependencies": {}
 }
