--- a/package.json
+++ b/package.json
@@ -34,18 +34,18 @@
   "author": "The ng-vcl authors",
   "license": "MIT",
   "devDependencies": {
-    "@angular-devkit/build-optimizer": "^0.5.9",
-    "@angular/animations": "^5.2.10",
-    "@angular/common": "^5.2.10",
-    "@angular/compiler": "^5.2.10",
-    "@angular/compiler-cli": "^5.2.10",
-    "@angular/core": "^5.2.10",
-    "@angular/forms": "^5.2.10",
-    "@angular/http": "^5.2.10",
-    "@angular/platform-browser": "^5.2.10",
-    "@angular/platform-browser-dynamic": "^5.2.10",
-    "@angular/router": "^5.2.10",
-    "@ngtools/webpack": "^1.10.2",
+    "@angular-devkit/build-optimizer": "^0.5.12",
+    "@angular/animations": "^6.0.0-rc.5",
+    "@angular/common": "^6.0.0-rc.5",
+    "@angular/compiler": "^6.0.0-rc.5",
+    "@angular/compiler-cli": "^6.0.0-rc.5",
+    "@angular/core": "^6.0.0-rc.5",
+    "@angular/forms": "^6.0.0-rc.5",
+    "@angular/http": "^6.0.0-rc.5",
+    "@angular/platform-browser": "^6.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "^6.0.0-rc.5",
+    "@angular/router": "^6.0.0-rc.5",
+    "@ngtools/webpack": "^6.0.0-rc.7",
     "@types/gulp": "^4.0.5",
     "@types/node": "^9.6.6",
     "@types/tether": "^1.4.3",
@@ -101,7 +101,7 @@
     "rollup-plugin-replace": "^2.0.0",
     "rucksack-css": "^1.0.2",
     "run-sequence": "^2.2.1",
-    "rxjs": "^5.5.10",
+    "rxjs": "^6.0.0",
     "style-loader": "^0.21.0",
     "sugarss": "^1.0.1",
     "to-string-loader": "^1.1.5",
