--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "lint": "tslint --type-check -p ./tsconfig.json",
     "lint:src": "tslint --type-check -p ./src/tsconfig.json",
-    "dev": "webpack-dev-server --env.target=development",
+    "dev": "TS_NODE_PROJECT=\"webpack.tsconfig.json\" MODE=development webpack-serve -r ts-node/register --config webpack.config.ts",
     "docs:clean": "rimraf docs",
-    "docs:build": "webpack --env.target=production",
     "docs:deploy": "git-directory-deploy --directory docs --branch gh-pages",
+    "docs:build": "TS_NODE_PROJECT=\"webpack.tsconfig.json\" MODE=production webpack --config webpack.config.ts",
     "docs": "npm-run-all lint docs:clean docs:build",
     "build:clean": "rimraf dist",
     "build:gulp": "gulp build",
@@ -47,23 +47,27 @@
     "@angular/router": "^6.0.0-rc.5",
     "@ngtools/webpack": "^6.0.0-rc.7",
     "@types/gulp": "^4.0.5",
-    "@types/node": "^9.6.6",
+    "@types/jasmine": "^2.8.6",
+    "@types/node": "^9.6.7",
     "@types/tether": "^1.4.3",
+    "@types/webpack": "^4.1.4",
+    "@types/webpack-merge": "^4.1.3",
     "@vcl/breakpoints": "^0.2.0",
     "@vcl/core-modules": "^0.2.10",
     "@vcl/default-theme": "^0.2.3",
     "@vcl/default-theme-terms": "^0.2.2",
     "@vcl/font-awesome": "^0.2.0",
     "@vcl/preprocessor": "^0.2.4",
-    "autoprefixer": "^8.3.0",
-    "awesome-typescript-loader": "^4.0.1",
+    "awesome-typescript-loader": "^5.0.0",
     "chance": "^1.0.16",
-    "circular-dependency-plugin": "^4.4.0",
+    "circular-dependency-plugin": "^5.0.2",
+    "connect-history-api-fallback": "^1.5.0",
     "copy-webpack-plugin": "^4.5.1",
     "core-js": "^2.5.5",
     "cpr": "^3.0.1",
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
+    "es6-promisify": "^6.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "fsmonitor": "^0.2.4",
@@ -79,18 +83,29 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "ignore-loader": "^0.1.2",
+    "jasmine-core": "^3.1.0",
     "json-loader": "^0.5.7",
-    "jsoneditor": "^5.14.1",
+    "jsoneditor": "^5.15.0",
     "jsonschema": "^1.2.4",
+    "karma": "^2.0.2",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^1.4.2",
+    "karma-jasmine": "^1.1.1",
+    "karma-jasmine-html-reporter": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^3.0.0",
+    "koa-connect": "^2.0.1",
     "markdown-loader": "^2.0.2",
     "marked": "^0.3.19",
     "merge-stream": "^1.0.1",
+    "mini-css-extract-plugin": "^0.4.0",
     "npm-run-all": "^4.1.2",
     "plotly.js": "1.34.0",
     "postcss-color-function": "^4.0.1",
     "postcss-css-variables": "^0.8.1",
     "postcss-cssnext": "^3.1.0",
     "postcss-easy-import": "^3.0.0",
+    "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.4",
     "postcss-nesting": "^5.0.0",
     "pre-commit": "^1.2.2",
@@ -107,11 +122,12 @@
     "to-string-loader": "^1.1.5",
     "ts-node": "^6.0.1",
     "tslint": "^5.9.1",
-    "typescript": "^2.8.3",
+    "typescript": "^2.7.2",
     "url-loader": "^1.0.1",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.2",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.1.2",
     "webpack-merge": "^4.1.2",
+    "webpack-serve": "^0.3.2",
     "zone.js": "^0.8.26"
   },
   "pre-commit": [
