--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@ng-vcl/ng-vcl",
-  "version": "0.4.0-12",
-  "description": "A comprehensive library of components for Angular 5+ with VCL based styling",
+  "version": "0.5.0-1",
+  "description": "A comprehensive library of components for Angular 6+ with VCL based styling",
   "scripts": {
     "lint": "tslint --type-check -p ./tsconfig.json",
     "lint:src": "tslint --type-check -p ./src/tsconfig.json",
-    "dev": "TS_NODE_PROJECT=\"webpack.tsconfig.json\" MODE=development webpack-serve -r ts-node/register --config webpack.config.ts",
+    "dev": "MODE=development webpack-serve --config webpack.config.js",
     "docs:clean": "rimraf docs",
     "docs:deploy": "git-directory-deploy --directory docs --branch gh-pages",
-    "docs:build": "TS_NODE_PROJECT=\"webpack.tsconfig.json\" MODE=production webpack --config webpack.config.ts",
+    "docs:build": "MODE=production webpack",
     "docs": "npm-run-all lint docs:clean docs:build",
     "build:clean": "rimraf dist",
     "build:gulp": "gulp build",
@@ -56,7 +56,6 @@
     "@vcl/default-theme": "^0.2.3",
     "@vcl/default-theme-terms": "^0.2.2",
     "@vcl/font-awesome": "^0.2.0",
-    "@vcl/preprocessor": "^0.2.4",
     "awesome-typescript-loader": "^5.0.0",
     "chance": "^1.0.16",
     "circular-dependency-plugin": "^5.0.2",
@@ -66,8 +65,6 @@
     "cpr": "^3.0.1",
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
-    "es6-promisify": "^6.0.0",
-    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "fsmonitor": "^0.2.4",
     "fuse.js": "^3.2.0",
@@ -101,13 +98,11 @@
     "postcss-color-function": "^4.0.1",
     "postcss-css-variables": "^0.8.1",
     "postcss-cssnext": "^3.1.0",
-    "postcss-easy-import": "^3.0.0",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.4",
     "postcss-nesting": "^5.0.0",
     "pre-commit": "^1.2.2",
     "raw-loader": "^0.5.1",
-    "reload-html-webpack-plugin": "^0.1.2",
     "resolve-bin": "^0.4.0",
     "rimraf": "^2.6.2",
     "rollup-plugin-replace": "^2.0.0",
