--- a/src/animations/package.json
+++ b/src/animations/package.json
@@ -15,5 +15,6 @@
     "@angular/core": "^6",
     "@angular/animations": "^6",
     "@ng-vcl/ng-vcl": "^0.5.0-2"
-  }
+  },
+  "sideEffects": false  
 }
