--- a/package.json
+++ b/package.json
@@ -33,23 +33,23 @@
   "author": "The ng-vcl authors",
   "license": "MIT",
   "devDependencies": {
-    "@angular-devkit/build-optimizer": "^0.6.0",
-    "@angular/animations": "^6.0.0-rc.6",
-    "@angular/common": "^6.0.0-rc.6",
-    "@angular/compiler": "^6.0.0-rc.6",
-    "@angular/compiler-cli": "^6.0.0-rc.6",
-    "@angular/core": "^6.0.0-rc.6",
-    "@angular/forms": "^6.0.0-rc.6",
-    "@angular/http": "^6.0.0-rc.6",
-    "@angular/platform-browser": "^6.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "^6.0.0-rc.6",
-    "@angular/router": "^6.0.0-rc.6",
-    "@ngtools/webpack": "^6.0.0-rc.11",
+    "@angular-devkit/build-optimizer": "^0.6.1",
+    "@angular/animations": "^6.0.1",
+    "@angular/common": "^6.0.1",
+    "@angular/compiler": "^6.0.1",
+    "@angular/compiler-cli": "^6.0.1",
+    "@angular/core": "^6.0.1",
+    "@angular/forms": "^6.0.1",
+    "@angular/http": "^6.0.1",
+    "@angular/platform-browser": "^6.0.1",
+    "@angular/platform-browser-dynamic": "^6.0.1",
+    "@angular/router": "^6.0.1",
+    "@ngtools/webpack": "^6.0.1",
     "@types/gulp": "^4.0.5",
     "@types/jasmine": "^2.8.7",
-    "@types/node": "^9.6.7",
+    "@types/node": "^9.6.16",
     "@types/tether": "^1.4.3",
-    "@types/webpack": "^4.1.4",
+    "@types/webpack": "^4.1.6",
     "@types/webpack-merge": "^4.1.3",
     "@vcl/breakpoints": "^0.2.0",
     "@vcl/core-modules": "^0.2.10",
@@ -61,7 +61,7 @@
     "circular-dependency-plugin": "^5.0.2",
     "connect-history-api-fallback": "^1.5.0",
     "copy-webpack-plugin": "^4.5.1",
-    "core-js": "^2.5.5",
+    "core-js": "^2.5.6",
     "cpr": "^3.0.1",
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
@@ -86,7 +86,7 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^1.4.2",
     "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^1.0.0",
+    "karma-jasmine-html-reporter": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.0",
     "koa-connect": "^2.0.1",
@@ -114,12 +114,12 @@
     "to-string-loader": "^1.1.5",
     "ts-node": "^6.0.3",
     "tslint": "^5.10.0",
-    "typescript": "^2.7.2",
+    "typescript": "~2.7.2",
     "url-loader": "^1.0.1",
-    "webpack": "^4.7.0",
+    "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-merge": "^4.1.2",
-    "webpack-serve": "^0.3.2",
+    "webpack-serve": "^1.0.2",
     "zone.js": "^0.8.26"
   },
   "pre-commit": [
