--- a/package.json
+++ b/package.json
@@ -33,18 +33,18 @@
   "author": "The ng-vcl authors",
   "license": "MIT",
   "devDependencies": {
-    "@angular-devkit/build-optimizer": "^0.6.7",
-    "@angular/animations": "^6.0.3",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
-    "@ngtools/webpack": "^6.0.7",
+    "@angular-devkit/build-optimizer": "^0.6.8",
+    "@angular/animations": "^6.0.4",
+    "@angular/common": "^6.0.4",
+    "@angular/compiler": "^6.0.4",
+    "@angular/compiler-cli": "^6.0.4",
+    "@angular/core": "^6.0.4",
+    "@angular/forms": "^6.0.4",
+    "@angular/http": "^6.0.4",
+    "@angular/platform-browser": "^6.0.4",
+    "@angular/platform-browser-dynamic": "^6.0.4",
+    "@angular/router": "^6.0.4",
+    "@ngtools/webpack": "^6.0.8",
     "@types/gulp": "^4.0.5",
     "@types/jasmine": "^2.8.8",
     "@types/node": "^9.6.16",
@@ -63,16 +63,17 @@
     "copy-webpack-plugin": "^4.5.1",
     "core-js": "^2.5.7",
     "cpr": "^3.0.1",
+    "cross-env": "^5.1.6",
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
     "file-loader": "^1.1.11",
     "fsmonitor": "^0.2.4",
-    "fuse.js": "^3.2.0",
+    "fuse.js": "^3.2.1",
     "git-directory-deploy": "^1.5.1",
     "gulp": "^3.9.1",
     "gulp-better-rollup": "^3.1.0",
     "gulp-json-modify": "^1.0.2",
-    "gulp-rename": "^1.2.3",
+    "gulp-rename": "^1.3.0",
     "gulp-replace": "^1.0.0",
     "hammerjs": "^2.0.8",
     "highlight-loader": "^0.7.2",
@@ -112,14 +113,14 @@
     "style-loader": "^0.21.0",
     "sugarss": "^1.0.1",
     "to-string-loader": "^1.1.5",
-    "ts-node": "^6.1.0",
+    "ts-node": "^6.1.1",
     "tslint": "^5.10.0",
     "typescript": "~2.7.2",
     "url-loader": "^1.0.1",
-    "webpack": "^4.10.2",
-    "webpack-cli": "^3.0.2",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.3",
     "webpack-merge": "^4.1.2",
-    "webpack-serve": "^1.0.2",
+    "webpack-serve": "^1.0.4",
     "zone.js": "^0.8.26"
   },
   "pre-commit": [
