--- a/src/ng-vcl/package.json
+++ b/src/ng-vcl/package.json
@@ -17,8 +17,7 @@
     "@angular/core": "^6",
     "@angular/forms": "^6",
     "@angular/router": "^6",
-    "rxjs": "^6",
-    "hammerjs": "^2"
+    "rxjs": "^6"
   },
   "sideEffects": false
 }
