--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "cpr": "^3.0.1",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
-    "cssnano": "^3.10.0",
+    "cssnano": "^4.0.5",
     "file-loader": "^1.1.11",
     "fsmonitor": "^0.2.4",
     "fuse.js": "^3.2.1",
@@ -102,9 +102,10 @@
     "postcss-color-function": "^4.0.1",
     "postcss-css-variables": "^0.9.0",
     "postcss-cssnext": "^3.1.0",
-    "postcss-import": "^11.1.0",
-    "postcss-loader": "^2.1.5",
+    "postcss-import": "^12.0.0",
+    "postcss-loader": "^3.0.0",
     "postcss-nesting": "^6.0.0",
+    "postcss-url": "^8.0.0",
     "pre-commit": "^1.2.2",
     "raw-loader": "^0.5.1",
     "resolve-bin": "^0.4.0",
@@ -113,13 +114,13 @@
     "rucksack-css": "^1.0.2",
     "run-sequence": "^2.2.1",
     "rxjs": "^6.2.1",
-    "style-loader": "^0.21.0",
-    "sugarss": "^1.0.1",
+    "style-loader": "^0.22.1",
+    "sugarss": "^2.0.0",
     "to-string-loader": "^1.1.5",
     "ts-node": "^7.0.0",
     "tslint": "^5.10.0",
     "typescript": "~2.7.2",
-    "url-loader": "^1.0.1",
+    "url-loader": "^1.1.1",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
     "webpack-merge": "^4.1.3",
