--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ng-vcl/ng-vcl",
-  "version": "0.6.0",
+  "version": "0.6.0-0",
   "description": "A comprehensive library of components for Angular 6+ with VCL based styling",
   "scripts": {
     "lint": "tslint --type-check -p ./tsconfig.json",
