Update VCL and VCL build system

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@vcl/breakpoints": "^0.2.1",
     "@vcl/core-modules": "^0.2.13",
     "@vcl/default-theme": "^0.2.4",
-    "@vcl/default-theme-terms": "^0.2.3",
+    "@vcl/default-theme-terms": "0.2.4",
     "@vcl/font-awesome": "^0.3.0",
     "awesome-typescript-loader": "^5.2.1",
     "chance": "^1.0.16",
@@ -92,19 +92,20 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.5",
     "koa-connect": "^2.0.1",
-    "markdown-loader": "^2.0.2",
+    "markdown-loader": "4.0.0",
     "markdownlint": "^0.11.0",
-    "markdownlint-cli": "^0.12.0",
-    "marked": "^0.3.19",
+    "markdownlint-cli": "0.13.0",
+    "marked": "0.5.1",
     "merge-stream": "^1.0.1",
     "mini-css-extract-plugin": "^0.4.4",
     "npm-run-all": "^4.1.3",
     "postcss-color-function": "^4.0.1",
-    "postcss-css-variables": "^0.9.0",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-import": "^12.0.0",
+    "postcss-css-variables": "^0.11.0",
+    "postcss-custom-media": "^7.0.7",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-nesting": "^6.0.0",
+    "postcss-nesting": "^7.0.0",
+    "postcss-preset-env": "6.4.0",
     "postcss-url": "^8.0.0",
     "pre-commit": "^1.2.2",
     "raw-loader": "^0.5.1",
@@ -114,7 +115,7 @@
     "rucksack-css": "^1.0.2",
     "run-sequence": "^2.2.1",
     "rxjs": "^6.3.3",
-    "style-loader": "^0.22.1",
+    "style-loader": "0.23.1",
     "sugarss": "^2.0.0",
     "to-string-loader": "^1.1.5",
     "ts-node": "^7.0.1",
