--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
     "core-js": "^2.5.7",
     "cpr": "^3.0.1",
     "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
-    "cssnano": "^4.1.5",
+    "css-loader": "1.0.1",
+    "cssnano": "4.1.7",
     "file-loader": "^1.1.11",
     "fsmonitor": "^0.2.4",
     "fuse.js": "^3.2.1",
