--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "lint:src": "tslint --type-check -p ./src/tsconfig.json",
     "dev": "cross-env MODE=development webpack-serve --config webpack.config.js",
     "docs:clean": "rimraf docs",
-    "docs:deploy": "git-directory-deploy --directory docs --branch gh-pages",
-    "docs:build": "cross-env MODE=production webpack",
-    "docs": "npm-run-all lint docs:clean docs:build",
+    "docs:deploy": "git-directory-deploy --directory docs --branch gh-pages --ignore_removal",
+    "docs:master:build": "cross-env MODE=production SUBDIR=master webpack",
+    "docs:master": "npm-run-all lint docs:clean docs:master:build",
+    "docs:dev:build": "cross-env MODE=production SUBDIR=dev webpack",
+    "docs:dev": "npm-run-all lint docs:clean docs:dev:build",
     "build:clean": "rimraf dist",
     "build:gulp": "gulp build",
     "build": "npm-run-all lint:src build:clean build:gulp",
