--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "lint": "tslint --type-check -p ./tsconfig.json",
     "lint:src": "tslint --type-check -p ./src/tsconfig.json",
     "dev": "cross-env MODE=development webpack-serve --config webpack.config.js",
-    "docs:clean": "rimraf docs",
-    "docs:deploy": "git-directory-deploy --directory docs --branch gh-pages --ignore_removal",
-    "docs:master:build": "cross-env MODE=production SUBDIR=master webpack",
+    "docs:clean": "rimraf docs && git clone -b gh-pages --single-branch https://github.com/ng-vcl/ng-vcl.git docs",
+    "docs:deploy": "git-directory-deploy --directory docs --branch gh-pages",
+    "docs:master:build": "rimraf docs/master && cross-env MODE=production SUBDIR=master webpack",
     "docs:master": "npm-run-all lint docs:clean docs:master:build",
-    "docs:dev:build": "cross-env MODE=production SUBDIR=dev webpack",
+    "docs:dev:build": "rimraf docs/dev && cross-env MODE=production SUBDIR=dev webpack",
     "docs:dev": "npm-run-all lint docs:clean docs:dev:build",
     "build:clean": "rimraf dist",
     "build:gulp": "gulp build",
