--- a/package.json
+++ b/package.json
@@ -35,45 +35,45 @@
   "author": "The ng-vcl authors",
   "license": "MIT",
   "devDependencies": {
-    "@angular-devkit/build-optimizer": "^0.6.8",
-    "@angular/animations": "^6.1.9",
-    "@angular/common": "^6.1.9",
-    "@angular/compiler": "^6.1.9",
-    "@angular/compiler-cli": "^6.1.9",
-    "@angular/core": "^6.1.9",
-    "@angular/forms": "^6.1.9",
-    "@angular/http": "^6.1.9",
-    "@angular/platform-browser": "^6.1.9",
-    "@angular/platform-browser-dynamic": "^6.1.9",
-    "@angular/router": "^6.1.9",
-    "@ngtools/webpack": "^6.2.4",
+    "@angular-devkit/build-optimizer": "^0.11.4",
+    "@angular/animations": "^7.1.4",
+    "@angular/common": "^7.1.4",
+    "@angular/compiler": "^7.1.4",
+    "@angular/compiler-cli": "^7.1.4",
+    "@angular/core": "^7.1.4",
+    "@angular/forms": "^7.1.4",
+    "@angular/http": "^7.1.4",
+    "@angular/platform-browser": "^7.1.4",
+    "@angular/platform-browser-dynamic": "^7.1.4",
+    "@angular/router": "^7.1.4",
+    "@ngtools/webpack": "^7.1.4",
     "@types/gulp": "^4.0.5",
-    "@types/jasmine": "^2.8.9",
-    "@types/node": "^9.6.16",
+    "@types/jasmine": "^3.3.4",
+    "@types/node": "^10.12.18",
     "@types/tether": "^1.4.4",
-    "@types/webpack": "^4.4.17",
+    "@types/webpack": "^4.4.22",
     "@types/webpack-merge": "^4.1.3",
     "@vcl/breakpoints": "^0.2.1",
     "@vcl/core-modules": "^0.2.13",
     "@vcl/default-theme": "^0.2.4",
-    "@vcl/default-theme-terms": "0.2.4",
+    "@vcl/default-theme-terms": "^0.2.5",
     "@vcl/font-awesome": "^0.3.0",
     "awesome-typescript-loader": "^5.2.1",
-    "chance": "^1.0.16",
+    "chance": "^1.0.18",
     "circular-dependency-plugin": "^5.0.2",
     "connect-history-api-fallback": "^1.5.0",
-    "copy-webpack-plugin": "^4.5.4",
-    "core-js": "^2.5.7",
+    "copy-webpack-plugin": "^4.6.0",
+    "core-js": "^2.6.1",
     "cpr": "^3.0.1",
     "cross-env": "^5.2.0",
-    "css-loader": "1.0.1",
+    "css-loader": "^2.0.2",
     "cssnano": "4.1.7",
-    "file-loader": "^1.1.11",
+    "file-loader": "^3.0.1",
     "fsmonitor": "^0.2.4",
-    "fuse.js": "^3.2.1",
+    "fuse.js": "^3.3.0",
     "git-directory-deploy": "^1.5.1",
-    "gulp": "^3.9.1",
-    "gulp-better-rollup": "^3.3.0",
+    "gulp": "^4.0.0",
+    "gulp-better-rollup": "^3.4.0",
     "gulp-json-modify": "^1.0.2",
     "gulp-rename": "^1.3.0",
     "gulp-replace": "^1.0.0",
@@ -82,34 +82,34 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "ignore-loader": "^0.1.2",
-    "jasmine-core": "^3.2.1",
+    "jasmine-core": "^3.3.0",
     "json-loader": "^0.5.7",
     "jsonschema": "^1.2.4",
-    "karma": "^2.0.4",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.4",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^1.3.1",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.5",
     "koa-connect": "^2.0.1",
     "markdown-loader": "4.0.0",
     "markdownlint": "^0.11.0",
     "markdownlint-cli": "0.13.0",
-    "marked": "0.5.1",
+    "marked": "^0.5.2",
     "merge-stream": "^1.0.1",
-    "mini-css-extract-plugin": "^0.4.4",
-    "npm-run-all": "^4.1.3",
+    "mini-css-extract-plugin": "^0.5.0",
+    "npm-run-all": "^4.1.5",
     "postcss-color-function": "^4.0.1",
     "postcss-css-variables": "^0.11.0",
     "postcss-custom-media": "^7.0.7",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-nesting": "^7.0.0",
-    "postcss-preset-env": "6.4.0",
+    "postcss-preset-env": "^6.5.0",
     "postcss-url": "^8.0.0",
     "pre-commit": "^1.2.2",
-    "raw-loader": "^0.5.1",
+    "raw-loader": "^1.0.0",
     "resolve-bin": "^0.4.0",
     "rimraf": "^2.6.2",
     "rollup-plugin-replace": "^2.1.0",
@@ -120,13 +120,14 @@
     "sugarss": "^2.0.0",
     "to-string-loader": "^1.1.5",
     "ts-node": "^7.0.1",
-    "tslint": "^5.10.0",
-    "typescript": "~2.7.2",
+    "tslint": "^5.12.0",
+    "typescript": "^3.1.6",
     "url-loader": "^1.1.2",
-    "webpack": "^4.21.0",
+    "webpack": "^4.28.1",
     "webpack-cli": "^3.1.2",
-    "webpack-merge": "^4.1.3",
-    "webpack-serve": "^2.0.0",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.5",
+    "webpack-serve": "^2.0.3",
     "zone.js": "^0.8.26"
   },
   "pre-commit": [
