--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26",
-    "document-register-element": "^1.8.1"
+    "document-register-element": "1.8.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.12.0",
