--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
               "demo/assets"
             ],
             "styles": [
-              "demo/styles.styl"
+              "demo/styles.sss"
             ],
             "deleteOutputPath": false
           },
@@ -80,7 +80,7 @@
             "tsConfig": "demo/tsconfig.spec.json",
             "karmaConfig": "demo/karma.conf.js",
             "styles": [
-              "demo/styles.styl"
+              "demo/styles.sss"
             ],
             "scripts": [],
             "assets": [
@@ -187,7 +187,7 @@
               }
             ],
             "styles": [
-              "demo/styles.styl"
+              "demo/styles.sss"
             ]
           },
           "configurations": {
