--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.7.0",
   "scripts": {
     "ng": "ng",
-    "start": "npm run dev",
-    "dev:demo": "ng serve ng-vcl-demo --plugin ~webpack.plugin.js",
+    "start": "npm run dev:demo",
+    "dev:demo": "ng serve ng-vcl-demo --plugin ~webpack.custom.js",
     "dev:ng-vcl": "ng build @ng-vcl/ng-vcl --watch",
     "dev:animations": "ng build @ng-vcl/animations --watch",
     "dev:jss-form": "ng build @ng-vcl/jss-form --watch",
-    "dev:wc": "ng serve ng-vcl-wc-test --plugin ~webpack.plugin.js",
+    "dev:wc": "ng serve ng-vcl-wc-test --plugin ~webpack.custom.js",
     "docs": "npm-run-all docs:clean docs:pull-current docs:build",
-    "docs:build": "cross-env GIT_BRANCH=$TRAVIS_BRANCH ng build --prod --plugin ~webpack.plugin.js",
+    "docs:build": "cross-env GIT_BRANCH=$TRAVIS_BRANCH ng build --prod --plugin ~webpack.custom.js",
     "docs:deploy": "git-directory-deploy --directory docs --branch gh-pages",
     "docs:clean": "rimraf docs",
     "docs:lint": "ng lint ng-vcl-demo",
@@ -27,7 +27,7 @@
     "build:ng-vcl/jss-form": "ng build @ng-vcl/jss-form",
     "build:ng-vcl": "npm-run-all build:ng-vcl/ng-vcl build:ng-vcl/animations build:ng-vcl/jss-form",
     "build": "npm-run-all build:clean build:ng-vcl",
-    "build:wc": "ng build ng-vcl-wc-test --prod --output-hashing none --single-bundle false --plugin ~webpack.plugin.js",
+    "build:wc": "ng build ng-vcl-wc-test --prod --output-hashing none --single-bundle false --plugin ~webpack.custom.js",
     "clean": "npm-run-all build:clean docs:clean",
     "docker": "docker run -it -v $(pwd):/app -p 0.0.0.0:3000:3000 node:6.9.1 /bin/bash /app/entrypoint.bash",
     "markdownlint": "markdownlint -c markdownlint.json lib/",
@@ -45,56 +45,53 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
-    "@angular/elements": "^7.2.0",
+    "@angular/elements": "~7.2.0",
     "@angular/forms": "~7.2.0",
-    "@angular/http": "^7.2.0",
+    "@angular/http": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "@vcl/breakpoints": "^0.2.1",
-    "@vcl/core-modules": "^0.2.14",
-    "@vcl/default-theme": "^0.2.4",
-    "@vcl/default-theme-terms": "^0.2.5",
-    "@vcl/font-awesome": "^0.3.0",
+    "@vcl/breakpoints": "^0.3.0-2",
+    "@vcl/core-modules": "^0.3.0-8",
+    "@vcl/font-awesome": "^0.3.0-2",
+    "@vcl/theme": "^0.3.0-1",
     "core-js": "^2.5.4",
+    "document-register-element": "1.8.1",
     "fuse.js": "^3.3.0",
     "jsonschema": "^1.2.4",
-    "ngx-build-plus": "^7.6.0",
+    "ngx-build-plus": "^7.7.6",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "document-register-element": "1.8.1"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.0",
-    "@angular-devkit/build-ng-packagr": "~0.12.0",
-    "@angular/cli": "~7.2.1",
+    "@angular-devkit/build-angular": "^0.13.4",
+    "@angular-devkit/build-ng-packagr": "^0.13.4",
+    "@angular/cli": "~7.3.4",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/jasmine": "~2.8.8",
+    "@types/jasmine": "^3.3.9",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^8.9.5",
-    "@vcl/preprocessor": "^0.2.9",
+    "@vcl/preprocessor": "^0.3.0-12",
     "codelyzer": "~4.5.0",
     "cross-env": "^5.2.0",
-    "css-loader": "^2.1.0",
     "git-branch": "^2.0.1",
     "git-directory-deploy": "^1.5.1",
     "highlight-loader": "^0.7.3",
-    "jasmine-core": "~2.99.1",
+    "jasmine-core": "^3.3.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "markdown-loader": "^4.0.0",
-    "ng-packagr": "^4.2.0",
+    "markdown-loader": "^5.0.0",
+    "ng-packagr": "^4.7.1",
     "npm-run-all": "^4.1.5",
     "protractor": "~5.4.0",
-    "sugarss": "^2.0.0",
-    "ts-node": "~7.0.0",
+    "ts-node": "^8.0.2",
     "tsickle": ">=0.34.0",
     "tslib": "^1.9.0",
     "tslint": "~5.11.0",
