--- a/package.json
+++ b/package.json
@@ -41,40 +41,41 @@
     "publish:jss-form:next": "cd dist/ng-vcl/jss-form && npm publish --tag next"
   },
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/elements": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/http": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "@vcl/breakpoints": "^0.3.0-2",
-    "@vcl/core-modules": "^0.3.0-8",
-    "@vcl/font-awesome": "^0.3.0-2",
+    "@angular/animations": "~7.2.9",
+    "@angular/common": "~7.2.9",
+    "@angular/compiler": "~7.2.9",
+    "@angular/core": "~7.2.9",
+    "@angular/elements": "~7.2.9",
+    "@angular/forms": "~7.2.9",
+    "@angular/http": "~7.2.9",
+    "@angular/platform-browser": "~7.2.9",
+    "@angular/platform-browser-dynamic": "~7.2.9",
+    "@angular/router": "~7.2.9",
+    "@vcl/breakpoints": "^0.4.0-beta.0",
+    "@vcl/core-modules": "^0.4.0-beta.0",
+    "@vcl/font-awesome": "^0.4.0-beta.0",
     "@vcl/theme": "^0.3.0-1",
     "core-js": "^2.5.4",
-    "document-register-element": "1.8.1",
-    "fuse.js": "^3.3.0",
+    "document-register-element": "^1.13.1",
+    "fuse.js": "^3.4.4",
     "jsonschema": "^1.2.4",
     "ngx-build-plus": "^7.7.6",
     "normalize.css": "^8.0.1",
-    "rxjs": "~6.3.3",
+    "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.4",
-    "@angular-devkit/build-ng-packagr": "^0.13.4",
-    "@angular/cli": "~7.3.4",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
+    "@angular-devkit/build-angular": "^0.13.5",
+    "@angular-devkit/build-ng-packagr": "^0.13.5",
+    "@angular/cli": "~7.3.5",
+    "@angular/compiler-cli": "~7.2.9",
+    "@angular/language-service": "~7.2.9",
+    "@ng-vcl/webpack-helper": "0.1.0-3",
     "@types/jasmine": "^3.3.9",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^8.9.5",
-    "@vcl/preprocessor": "^0.3.0-12",
+    "@vcl/preprocessor": "^0.4.0-beta.0",
     "codelyzer": "~4.5.0",
     "cross-env": "^5.2.0",
     "git-branch": "^2.0.1",
@@ -91,10 +92,10 @@
     "ng-packagr": "^4.7.1",
     "npm-run-all": "^4.1.5",
     "protractor": "~5.4.0",
-    "ts-node": "^8.0.2",
+    "ts-node": "^8.0.3",
     "tsickle": ">=0.34.0",
     "tslib": "^1.9.0",
-    "tslint": "~5.11.0",
+    "tslint": "^5.14.0",
     "typescript": "~3.2.2"
   }
 }
