--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "core-js": "^2.5.4",
     "document-register-element": "^1.13.1",
     "fuse.js": "^3.4.4",
+    "hammerjs": "^2.0.8",
     "jsonschema": "^1.2.4",
     "ngx-build-plus": "^7.7.6",
     "normalize.css": "^8.0.1",
