--- a/package.json
+++ b/package.json
@@ -41,20 +41,20 @@
     "publish:jss-form:next": "cd dist/ng-vcl/jss-form && npm publish --tag next"
   },
   "dependencies": {
-    "@angular/animations": "~7.2.9",
-    "@angular/common": "~7.2.9",
-    "@angular/compiler": "~7.2.9",
-    "@angular/core": "~7.2.9",
-    "@angular/elements": "~7.2.9",
-    "@angular/forms": "~7.2.9",
-    "@angular/http": "~7.2.9",
-    "@angular/platform-browser": "~7.2.9",
-    "@angular/platform-browser-dynamic": "~7.2.9",
-    "@angular/router": "~7.2.9",
-    "@vcl/breakpoints": "^0.4.0-beta.1",
-    "@vcl/core-modules": "^0.4.0-beta.1",
-    "@vcl/font-awesome": "^0.4.0-beta.1",
-    "@vcl/theme": "^0.3.0-1",
+    "@angular/animations": "~7.2.10",
+    "@angular/common": "~7.2.10",
+    "@angular/compiler": "~7.2.10",
+    "@angular/core": "~7.2.10",
+    "@angular/elements": "~7.2.10",
+    "@angular/forms": "~7.2.10",
+    "@angular/http": "~7.2.10",
+    "@angular/platform-browser": "~7.2.10",
+    "@angular/platform-browser-dynamic": "~7.2.10",
+    "@angular/router": "~7.2.10",
+    "@vcl/breakpoints": "^0.4.0",
+    "@vcl/core-modules": "^0.4.0",
+    "@vcl/font-awesome": "^0.4.0",
+    "@vcl/theme": "^0.4.0",
     "core-js": "^2.5.4",
     "document-register-element": "^1.13.1",
     "fuse.js": "^3.4.4",
@@ -69,14 +69,14 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.5",
     "@angular-devkit/build-ng-packagr": "^0.13.5",
-    "@angular/cli": "~7.3.5",
-    "@angular/compiler-cli": "~7.2.9",
-    "@angular/language-service": "~7.2.9",
+    "@angular/cli": "~7.3.6",
+    "@angular/compiler-cli": "~7.2.10",
+    "@angular/language-service": "~7.2.10",
     "@ng-vcl/webpack-helper": "0.1.0-3",
     "@types/jasmine": "^3.3.9",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^8.9.5",
-    "@vcl/preprocessor": "^0.4.0-beta.1",
+    "@vcl/preprocessor": "^0.4.0",
     "codelyzer": "~4.5.0",
     "cross-env": "^5.2.0",
     "git-branch": "^2.0.1",
