--- a/wc/tsconfig.json
+++ b/wc/tsconfig.json
@@ -1,9 +1,10 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../out-tsc/app",
+    "outDir": "../out-tsc/app",
     "types": []
   },
+  "types": ["node"],
   "exclude": [
     "test.ts",
     "**/*.spec.ts"
