--- a/package.json
+++ b/package.json
@@ -23,9 +23,8 @@
     "e2e": "ng e2e",
     "build:clean": "rimraf dist/ng-vcl",
     "build:ng-vcl/ng-vcl": "ng build @ng-vcl/ng-vcl",
-    "build:ng-vcl/animations": "ng build @ng-vcl/animations",
     "build:ng-vcl/jss-form": "ng build @ng-vcl/jss-form",
-    "build:ng-vcl": "npm-run-all build:ng-vcl/ng-vcl build:ng-vcl/animations build:ng-vcl/jss-form",
+    "build:ng-vcl": "npm-run-all build:ng-vcl/ng-vcl",
     "build": "npm-run-all build:clean build:ng-vcl",
     "build:wc": "ng build ng-vcl-wc-test --prod --output-hashing none --single-bundle false --plugin ~webpack.custom.js",
     "clean": "npm-run-all build:clean docs:clean",
@@ -41,17 +40,17 @@
     "publish:jss-form:next": "cd dist/ng-vcl/jss-form && npm publish --tag next"
   },
   "dependencies": {
-    "@angular/animations": "~7.2.10",
-    "@angular/cdk": "^7.3.6",
-    "@angular/common": "~7.2.10",
-    "@angular/compiler": "~7.2.10",
-    "@angular/core": "~7.2.10",
-    "@angular/elements": "~7.2.10",
-    "@angular/forms": "~7.2.10",
-    "@angular/http": "~7.2.10",
-    "@angular/platform-browser": "~7.2.10",
-    "@angular/platform-browser-dynamic": "~7.2.10",
-    "@angular/router": "~7.2.10",
+    "@angular/animations": "^7.2.14",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "^7.2.14",
+    "@angular/compiler": "^7.2.14",
+    "@angular/core": "^7.2.14",
+    "@angular/elements": "^7.2.14",
+    "@angular/forms": "^7.2.14",
+    "@angular/http": "^7.2.14",
+    "@angular/platform-browser": "^7.2.14",
+    "@angular/platform-browser-dynamic": "^7.2.14",
+    "@angular/router": "^7.2.14",
     "@vcl/breakpoints": "^0.4.2",
     "@vcl/core-modules": "^0.4.2",
     "@vcl/font-awesome": "^0.4.2",
@@ -68,13 +67,13 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.5",
-    "@angular-devkit/build-ng-packagr": "^0.13.5",
-    "@angular/cli": "~7.3.6",
-    "@angular/compiler-cli": "~7.2.10",
-    "@angular/language-service": "~7.2.10",
+    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular-devkit/build-ng-packagr": "^0.13.8",
+    "@angular/cli": "^7.3.8",
+    "@angular/compiler-cli": "^7.2.14",
+    "@angular/language-service": "^7.2.14",
     "@ng-vcl/webpack-helper": "0.1.0-3",
-    "@types/jasmine": "^3.3.9",
+    "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^8.9.5",
     "@vcl/preprocessor": "^0.4.2",
