--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "e2e": "ng e2e",
     "build:clean": "rimraf dist/ng-vcl",
     "build:ng-vcl/ng-vcl": "ng build @ng-vcl/ng-vcl",
+    "postbuild:ng-vcl/ng-vcl": "cp lib/ng-vcl/styles.sss dist/ng-vcl/ng-vcl",
     "build:ng-vcl/jss-form": "ng build @ng-vcl/jss-form",
     "build:ng-vcl": "npm-run-all build:ng-vcl/ng-vcl",
     "build": "npm-run-all build:clean build:ng-vcl",
