--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-vcl",
-  "version": "0.8.0",
+  "version": "0.9.0-0",
   "scripts": {
     "ng": "ng",
     "start": "npm run dev:demo",
@@ -40,42 +40,41 @@
     "publish:jss-form:next": "cd dist/ng-vcl/jss-form && npm publish --tag next"
   },
   "dependencies": {
-    "@angular/animations": "^7.2.15",
-    "@angular/cdk": "^7.3.7",
-    "@angular/common": "^7.2.15",
-    "@angular/compiler": "^7.2.15",
-    "@angular/core": "^7.2.15",
-    "@angular/elements": "^7.2.15",
-    "@angular/forms": "^7.2.15",
-    "@angular/http": "^7.2.15",
-    "@angular/platform-browser": "^7.2.15",
-    "@angular/platform-browser-dynamic": "^7.2.15",
-    "@angular/router": "^7.2.15",
+    "@angular/animations": "^8.0.1",
+    "@angular/cdk": "^8.0.1",
+    "@angular/common": "^8.0.1",
+    "@angular/compiler": "^8.0.1",
+    "@angular/core": "^8.0.1",
+    "@angular/elements": "^8.0.1",
+    "@angular/forms": "^8.0.1",
+    "@angular/platform-browser": "^8.0.1",
+    "@angular/platform-browser-dynamic": "^8.0.1",
+    "@angular/router": "^8.0.1",
     "@vcl/breakpoints": "^0.4.2",
     "@vcl/core-modules": "^0.4.2",
     "@vcl/font-awesome": "^0.4.2",
     "@vcl/theme": "^0.4.2",
     "core-js": "^2.5.4",
     "document-register-element": "1.13.2",
-    "fuse.js": "^3.4.4",
+    "fuse.js": "^3.4.5",
     "hammerjs": "^2.0.8",
     "jsonschema": "^1.2.4",
-    "ngx-build-plus": "^7.8.3",
+    "ngx-build-plus": "^8.0.3",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.5.2",
-    "tslib": "^1.9.0",
+    "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular-devkit/build-ng-packagr": "^0.13.9",
-    "@angular/cli": "^7.3.9",
-    "@angular/compiler-cli": "^7.2.15",
-    "@angular/language-service": "^7.2.15",
+    "@angular-devkit/build-angular": "^0.800.3",
+    "@angular-devkit/build-ng-packagr": "^0.800.3",
+    "@angular/cli": "^8.0.3",
+    "@angular/compiler-cli": "^8.0.1",
+    "@angular/language-service": "^8.0.1",
     "@ng-vcl/webpack-helper": "^0.1.1",
-    "@types/jasmine": "^3.3.12",
+    "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.0.1",
+    "@types/node": "^12.0.8",
     "@vcl/preprocessor": "^0.4.2",
     "codelyzer": "~4.5.0",
     "cross-env": "^5.2.0",
@@ -90,13 +89,12 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "markdown-loader": "^5.0.0",
-    "ng-packagr": "^5.1.0",
+    "ng-packagr": "^5.3.0",
     "npm-run-all": "^4.1.5",
     "protractor": "~5.4.0",
-    "ts-node": "^8.1.0",
+    "ts-node": "^8.2.0",
     "tsickle": "0.35.0",
-    "tslib": "^1.9.0",
-    "tslint": "^5.16.0",
-    "typescript": "^3.2.4"
+    "tslint": "^5.17.0",
+    "typescript": "^3.4.5"
   }
 }
