Update demo build script

--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "dev:animations": "ng build @ng-vcl/animations --watch",
     "dev:jss-form": "ng build @ng-vcl/jss-form --watch",
     "dev:wc": "ng serve ng-vcl-wc-test --plugin ~webpack.custom.js",
-    "docs": "npm-run-all docs:clean-all docs:pull-current docs:clean-branch docs:build",
-    "docs:build": "cross-env GIT_BRANCH=$TRAVIS_BRANCH ng build --prod --plugin ~webpack.custom.js",
+    "docs": "cross-env-shell npm run docs:set-env npm-run-all docs:set-env docs:clean-all docs:pull-current docs:clean-branch docs:build",
+    "docs:set-env": "cross-env-shell GIT_BRANCH=${TRAVIS_BRANCH:-$(git rev-parse --abbrev-ref HEAD)}",
+    "docs:build": "cross-env-shell ng build --prod --plugin ~webpack.custom.js",
     "docs:deploy": "git-directory-deploy --directory docs --branch gh-pages",
-    "docs:clean-branch": "rimraf docs/$(git rev-parse --abbrev-ref HEAD)",
+    "docs:clean-branch": "cross-env-shell rimraf docs/${GIT_BRANCH}",
     "docs:clean-all": "rimraf docs",
     "docs:lint": "ng lint ng-vcl-demo",
     "docs:pull-current": "git clone -b gh-pages --single-branch https://github.com/ng-vcl/ng-vcl.git docs",
@@ -79,7 +80,6 @@
     "@vcl/preprocessor": "^0.4.2",
     "codelyzer": "~5.1.0",
     "cross-env": "^5.2.0",
-    "git-branch": "^2.0.1",
     "git-directory-deploy": "^1.5.1",
     "highlight-loader": "^0.7.3",
     "jasmine-core": "^3.4.0",
