--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "dev:animations": "ng build @ng-vcl/animations --watch",
     "dev:jss-form": "ng build @ng-vcl/jss-form --watch",
     "dev:wc": "ng serve ng-vcl-wc-test --plugin ~webpack.custom.js",
-    "docs": "cross-env-shell npm run docs:set-env npm-run-all docs:set-env docs:clean-all docs:pull-current docs:clean-branch docs:build",
+    "docs": "cross-env-shell npm run docs:set-env npm-run-all docs:set-env docs:clean docs:pull-current docs:build",
     "docs:set-env": "cross-env-shell GIT_BRANCH=${TRAVIS_BRANCH:-$(git rev-parse --abbrev-ref HEAD)}",
-    "docs:build": "cross-env-shell ng build --prod --plugin ~webpack.custom.js",
+    "docs:build": "cross-env-shell ng build --prod --outputPath=docs/${GIT_BRANCH} --plugin ~webpack.custom.js",
     "docs:deploy": "git-directory-deploy --directory docs --branch gh-pages",
-    "docs:clean-branch": "cross-env-shell rimraf docs/${GIT_BRANCH}",
-    "docs:clean-all": "rimraf docs",
+    "docs:clean": "rimraf docs",
     "docs:lint": "ng lint ng-vcl-demo",
     "docs:pull-current": "git clone -b gh-pages --single-branch https://github.com/ng-vcl/ng-vcl.git docs",
     "test:ng-vcl": "ng test @ng-vcl/ng-vcl --watch=false",
