build: remove unused scripts

--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
     "start": "npm run dev:demo",
     "dev:demo": "ng serve ng-vcl-demo --plugin ~webpack.custom.js",
     "dev:ng-vcl": "ng build @ng-vcl/ng-vcl --watch",
-    "dev:animations": "ng build @ng-vcl/animations --watch",
-    "dev:jss-form": "ng build @ng-vcl/jss-form --watch",
     "dev:wc": "ng serve ng-vcl-wc-test --plugin ~webpack.custom.js",
     "docs": "cross-env-shell npm run docs:set-env npm-run-all docs:set-env docs:clean docs:pull-current docs:build",
     "docs:set-env": "cross-env-shell GIT_BRANCH=${TRAVIS_BRANCH:-$(git rev-parse --abbrev-ref HEAD)}",
@@ -16,10 +14,7 @@
     "docs:clean": "rimraf docs",
     "docs:lint": "ng lint ng-vcl-demo",
     "docs:pull-current": "git clone -b gh-pages --single-branch https://github.com/ng-vcl/ng-vcl.git docs",
-    "test:ng-vcl": "ng test @ng-vcl/ng-vcl --watch=false",
-    "test:animations": "ng test @ng-vcl/animations --watch=false",
-    "test:jss-form": "ng test @ng-vcl/jss-form --watch=false",
-    "test": "npm-run-all test:ng-vcl test:animations test:jss-form",
+    "test": "ng test @ng-vcl/ng-vcl --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "build:clean": "rimraf dist/ng-vcl",
@@ -29,16 +24,9 @@
     "build": "npm-run-all build:clean build:ng-vcl",
     "build:wc": "ng build ng-vcl-wc-test --prod --output-hashing none --single-bundle false --plugin ~webpack.custom.js",
     "clean": "npm-run-all build:clean docs:clean",
-    "docker": "docker run -it -v $(pwd):/app -p 0.0.0.0:3000:3000 node:6.9.1 /bin/bash /app/entrypoint.bash",
     "markdownlint": "markdownlint -c markdownlint.json lib/",
-    "publish": "npm-run-all publish:ng-vcl publish:animations publish:jss-form",
-    "publish:next": "npm-run-all publish:ng-vcl:next publish:animations:next publish:jss-form:next",
-    "publish:ng-vcl": "cd dist/ng-vcl/ng-vcl && npm publish",
-    "publish:animations": "cd dist/ng-vcl/animations && npm publish",
-    "publish:jss-form": "cd dist/ng-vcl/jss-form && npm publish",
-    "publish:ng-vcl:next": "cd dist/ng-vcl/ng-vcl && npm publish --tag next",
-    "publish:animations:next": "cd dist/ng-vcl/animations && npm publish --tag next",
-    "publish:jss-form:next": "cd dist/ng-vcl/jss-form && npm publish --tag next"
+    "publish": "cd dist/ng-vcl/ng-vcl && npm publish",
+    "publish:next": "cd dist/ng-vcl/ng-vcl && npm publish --tag next"
   },
   "dependencies": {
     "@angular/animations": "^8.1.2",
