build: update .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ before_install:
 - echo -e "machine github.com\n  login $GITHUB_TOKEN" > ~/.netrc
 
 script:
-  - npm install
+  - npm ci
   - npm run docs
   - npm run docs:deploy
