refactor: update to vcl 1.0.0 and angular 9
BREAKING CHANGE: VCL 1.0.0+ and angular 9+ are required.

--- a/angular.json
+++ b/angular.json
@@ -26,8 +26,11 @@
               }
             ],
             "styles": [
-              "demo/styles.sss"
+              "demo/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": ["node_modules"]
+            },
             "scripts": [],
             "es5BrowserSupport": true
           },
@@ -84,7 +87,7 @@
             "tsConfig": "demo/tsconfig.spec.json",
             "karmaConfig": "demo/karma.conf.js",
             "styles": [
-              "demo/styles.sss"
+              "demo/styles.scss"
             ],
             "scripts": [],
             "assets": [
@@ -166,7 +169,7 @@
               }
             ],
             "styles": [
-              "wc/styles.sss"
+              "wc/styles.scss"
             ]
           },
           "configurations": {
