--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "e2e": "ng e2e",
     "build:clean": "rimraf dist/ng-vcl",
     "build:ng-vcl/ng-vcl": "ng build @ng-vcl/ng-vcl",
-    "postbuild:ng-vcl/ng-vcl": "cp lib/ng-vcl/*.sss dist/ng-vcl/ng-vcl",
+    "postbuild:ng-vcl/ng-vcl": "cp lib/ng-vcl/*.scss dist/ng-vcl/ng-vcl",
     "build:ng-vcl": "npm-run-all build:ng-vcl/ng-vcl",
     "build": "npm-run-all build:clean build:ng-vcl",
     "build:wc": "ng build ng-vcl-wc-test --prod --output-hashing none --single-bundle false --plugin ~webpack.custom.js",
@@ -31,41 +31,44 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1"
   },
   "dependencies": {
-    "@angular/animations": "^8.2.14",
+    "@angular/animations": "^9.0.0-rc.10",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/elements": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
-    "@vcl/vcl": "^0.7.0-alpha.3",
-    "core-js": "^3.6.2",
+    "@angular/common": "^9.0.0-rc.10",
+    "@angular/compiler": "^9.0.0-rc.10",
+    "@angular/core": "^9.0.0-rc.10",
+    "@angular/elements": "^9.0.0-rc.10",
+    "@angular/forms": "^9.0.0-rc.10",
+    "@angular/platform-browser": "^9.0.0-rc.10",
+    "@angular/platform-browser-dynamic": "^9.0.0-rc.10",
+    "@angular/router": "^9.0.0-rc.10",
+    "@fortawesome/fontawesome-free": "^5.12.0",
+    "@mdi/font": "^4.8.95",
+    "@vcl/vcl": "^1.0.0-beta.2",
+    "bootstrap": "^4.4.1",
+    "core-js": "^3.6.4",
     "document-register-element": "1.14.3",
     "fuse.js": "^3.4.6",
     "hammerjs": "^2.0.8",
     "jsonschema": "^1.2.5",
     "ngx-build-plus": "^9.0.2",
+    "normalize.css": "^8.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.21",
-    "@angular-devkit/build-ng-packagr": "^0.803.21",
-    "@angular/cli": "^8.3.21",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
-    "@types/jasmine": "^3.5.0",
+    "@angular-devkit/build-angular": "^0.900.0-rc.10",
+    "@angular-devkit/build-ng-packagr": "^0.900.0-rc.10",
+    "@angular/cli": "^9.0.0-rc.10",
+    "@angular/compiler-cli": "^9.0.0-rc.10",
+    "@angular/language-service": "^9.0.0-rc.10",
+    "@types/jasmine": "^3.5.1",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^13.1.4",
-    "@vcl/preprocessor": "^0.6.3",
+    "@types/node": "^13.1.8",
     "codelyzer": "~5.2.1",
     "conventional-changelog-cli": "^2.0.31",
     "cross-env": "^6.0.3",
-    "css-loader": "^3.4.1",
+    "css-loader": "^3.4.2",
     "cz-conventional-changelog": "^3.0.2",
     "git-directory-deploy": "^1.5.1",
     "highlight-loader": "^0.7.3",
@@ -74,17 +77,17 @@
     "karma": "~4.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "~3.0.1",
+    "karma-jasmine": "^3.1.0",
     "karma-jasmine-html-reporter": "^1.5.1",
     "lerna": "^3.20.2",
     "markdown-loader": "^5.1.0",
-    "ng-packagr": "^5.7.1",
+    "ng-packagr": "^9.0.0-rc.7",
     "npm-run-all": "^4.1.5",
     "protractor": "~5.4.0",
-    "ts-node": "^8.5.4",
-    "tsickle": "0.37.1",
-    "tslint": "^5.20.1",
-    "typescript": "^3.5.3",
+    "ts-node": "^8.6.2",
+    "tsickle": "0.38.0",
+    "tslint": "^6.0.0",
+    "typescript": "^3.7.5",
     "webpack-merge": "^4.2.2"
   },
   "config": {
